fix: refresh toke rotation, register returns tokens, user id fix
